--- a/front_end/src/assets/mycss/mainpage.scss
+++ b/front_end/src/assets/mycss/mainpage.scss
@@ -42,3 +42,26 @@ div {
     margin-top: 5px;
   }
 }
+
+.titleimg {
+  width: 25%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.titleheader {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+div {
+  &.linktodetail {
+  display: inline;
+  float: right;
+  &a{
+    color: #FFA263;
+  }
+  }
+  
+}
