--- a/front_end/src/assets/mycss/mainpage.scss
+++ b/front_end/src/assets/mycss/mainpage.scss
@@ -16,6 +16,9 @@ div {
     &.n-full {
       background-color: #00ADE0;
     }
+    &.w-full {
+      background-color: lightgray;
+    }
     &#true {
       visibility: visible;
     }
