--- a/front_end/src/components/Calendar/Calendar.scss
+++ b/front_end/src/components/Calendar/Calendar.scss
@@ -48,6 +48,7 @@
         font-size: 0.8rem;
         display: inline-block;
         width: calc(100%/7);
+        
         height: 0;
         padding-bottom: calc(100%/7);
         &:first-child{
@@ -67,8 +68,8 @@
           display: inline-flex;
           justify-content: center;
           align-items: center;
-          width: 70%;
-          height: 70%;
+          width: 50%;
+          height: 50%;
           position: absolute;
           top: 50%;
           left: 50%;
@@ -80,6 +81,7 @@
             background-color: rgba(red,0.1);
           }
           &.selected{
+            border-color: red;
             background-color: #5f91ff;
             color: white;
           }
@@ -87,7 +89,11 @@
             color: #b0b0b0;
           }
         }
-        
+        .count {
+          position: absolute;
+          top: 70%;
+          left: 40%;
+        }
       }
     }
   }
