--- a/front_end/src/components/Calendar/Calendar.scss
+++ b/front_end/src/components/Calendar/Calendar.scss
@@ -92,7 +92,21 @@
         .count {
           position: absolute;
           top: 70%;
-          left: 40%;
+          transform: translate(-70%, 0%);
+          background-color: rgba(#ffa263, 0.5);
+          border: none;
+          color:black;
+          padding: 4px 4px;
+          border-radius: 8px;
+          text-align: center;
+          text-decoration: none;
+          display: inline-block;
+          font-size: 10px;
+          margin: 4px;
+          cursor: pointer;
+          &:hover{
+            background-color: rgba(#ffa263, 0.2);
+          }
         }
       }
     }
