2월 16일까지 반영

--- a/front_end/src/assets/mycss/button.scss
+++ b/front_end/src/assets/mycss/button.scss
@@ -20,11 +20,12 @@ button {
 }
 
 #btn-div {
-
+    // position: absolute;;
+    // left :80vw;
     .my--btn {
         margin-bottom: 5px;
         // width: 96%;
-        width: 100%;
+        width: 60px;
         background-color: #ffa263;
         border: none;
         border-radius: 8px;
