--- a/front_end/src/assets/mycss/header.scss
+++ b/front_end/src/assets/mycss/header.scss
@@ -1,13 +1,15 @@
 .vol-header {
     position: fixed;
+    bottom : 0;
     display: flex;
-    top: 100%;
+    // top: 100%;
     width: 100%;
-    left: 50%;
+    // left: 50%;
     right: 0;
-    transform: translate(-50%, -50px);
+    // transform: translate(-50%, -50px);
 
     .vol-header-item {
         flex: 1;
+        transform: translateY(5px);
     }
 }
