1차 완료, 머지 후 테스트 필요

--- a/front_end/src/components/footer/Footer.css
+++ b/front_end/src/components/footer/Footer.css
@@ -12,5 +12,10 @@ div.ui.menu {
 }
 
 .ui .borderless .menu {
-    margin-top: 0 !important;
+    /* margin-top: 0 !important; */
+}
+
+.ui.borderless.bottom.fixed.three.item.menu a.active.item {
+    /* background-color: rgba(255, 136, 0, 0.24); */
+    font-weight: bold;
 }
