--- a/front_end/src/containers/posting/PostingList.css
+++ b/front_end/src/containers/posting/PostingList.css
@@ -1,5 +1,5 @@
-h4 {
+.infinite-scroll-component h4 {
     display: block;
     max-width: 290px;
-    margin: auto !important;
+    margin-left: 3em;
 }
