--- a/front_end/src/containers/usersetting/CategoryContainer.css
+++ b/front_end/src/containers/usersetting/CategoryContainer.css
@@ -1,5 +1,11 @@
-#CategoryText{
+.ulText{
     line-height: 30px;
     height:30px;
     margin-right: 5px 
+}
+#ulContainer{
+    display: flex;
+}
+div.ui.search.dropdown{
+    width:240px;
 }
