인트로 로그인 추가 & 헤더 작업

--- a/front_end/src/components/footer/Footer.css
+++ b/front_end/src/components/footer/Footer.css
@@ -19,3 +19,7 @@ div.ui.menu {
     /* background-color: rgba(255, 136, 0, 0.24); */
     font-weight: bold;
 }
+
+.ui.menu .item>i.icon {
+    margin: auto;
+}
