--- a/front_end/src/components/vol/VolDetail.css
+++ b/front_end/src/components/vol/VolDetail.css
@@ -1,4 +1,3 @@
-
 .ui .celled .unstackable .table {
     padding: 10px;
 }
@@ -14,10 +13,14 @@ td.content {
     word-break: keep-all;
 }
 
+td.content {
+    word-break: normal;
+}
+
 table.ui.table {
     border: none;
-    border-bottom: 1px solid rgba(34,36,38,.1);
-    border-top: 1px solid rgba(34,36,38,.1);
+    border-bottom: 1px solid rgba(34, 36, 38, .1);
+    border-top: 1px solid rgba(34, 36, 38, .1);
 }
 
 div.buttons {
