--- a/front_end/src/components/vol/VolDetail.css
+++ b/front_end/src/components/vol/VolDetail.css
@@ -14,6 +14,10 @@ td.content {
     word-break: keep-all;
 }
 
+td.content.detail {
+    word-break: normal;
+}
+
 table.ui.table {
     border: none;
     border-bottom: 1px solid rgba(34,36,38,.1);
