--- a/front_end/src/containers/intro/Intro.css
+++ b/front_end/src/containers/intro/Intro.css
@@ -26,3 +26,12 @@ a.ui.button.loginbutton {
 div.loginbutton {
     align-items: center;
 }
+
+div {
+    word-break: keep-all;
+    line-height: 2em;
+}
+
+div.main-list-details p {
+    line-height: 1.1em;
+}
