remove react & typescript warning

--- a/front_end/src/components/posting/Card.css
+++ b/front_end/src/components/posting/Card.css
@@ -20,6 +20,14 @@ div.ui.modal.transition.visible.active div.content div.description {
     word-break: break-all;
 }
 
+div.ui.page.modals.dimmer.transition.visible.active div.ui.modal.transition.visible.active div.actions {
+    padding-bottom: 0px !important;
+}
+
+div.ui.page.modals.dimmer.transition.visible.active div.ui.modal.transition.visible.active div.actions button.ui.primary {
+    background-color: rgba(255, 136, 0, 0.493);
+}
+
 div.ui.card {
     margin: auto;
     margin-top: 1.5em !important;
