이제 다른 사용자  아이디를 누를면 해당 사용자의 활동 내역도 볼 수 있습니다.

--- a/front_end/src/components/user/profile/UserProfile.scss
+++ b/front_end/src/components/user/profile/UserProfile.scss
@@ -1,14 +1,17 @@
 .user-profile button.ui.orange.button {
     padding: 0.2rem;
     font-size: 1rem;
-    float: right;
+    position : absolute;
+    left: 50%;
+    transform: translateX(6.5rem);
+
 }
 
 div.user-profile {
     display: block;
     font-size: 0.75rem;
-    color: rgb(156, 156, 156)
-
+    color: rgb(156, 156, 156);
+    position : relative;
 }
 
 div.user-profile div{ 
@@ -19,6 +22,7 @@ div.user-profile div{
         line-height: 1.28571429rem;
         color: rgba(0,0,0,.85);
         display : block;
+        cursor: pointer;
     }
     div{
         display: inline;
