--- a/front_end/src/containers/mainpage/MainPage.css
+++ b/front_end/src/containers/mainpage/MainPage.css
@@ -2,8 +2,10 @@ div.ui.segment, .ui.segments .segment {
     border: none;
     box-shadow: none;
 }
-.divText{
+#divText{
     line-height: 30px;
     height:30px;
-    margin-right: 5px 
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: 1rem;
 }
