--- a/front_end/src/containers/posting/PostingList.css
+++ b/front_end/src/containers/posting/PostingList.css
@@ -1,20 +1,22 @@
-.infinite-scroll-component h4 {
+.infinite-scroll-component p {
     display: block;
     max-width: 290px;
     margin-left: 3rem;
+    margin-top: 1rem;
 }
+
 div.listtitle {
     word-break: normal;
     line-height: 1.5rem;
     margin-top: 0.3rem;
     margin-bottom: 0.2rem;
-    font-size: 1rem;   
+    font-size: 1.1rem;   
 }
 
 div.list{
-    /* padding: 0.4rem; */
+    /* padding: 0.4em; */
     padding: 0.6rem;
-    /* padding-bottom: 0.8rem; */
+    /* padding-bottom: 0.8em; */
     border-bottom: solid .5px lightgray;
 }
 
