포스팅에서 봉사정보 표시

--- a/front_end/src/components/posting/PostDetail.css
+++ b/front_end/src/components/posting/PostDetail.css
@@ -19,8 +19,26 @@ div.comment{
     color: black !important;
 }
 
-
 div.comment div {
     margin-top: 0.5rem;
     width: 100%;
 }
+
+div.listtitle {
+    word-break: normal;
+    line-height: 1.5rem;
+    margin-top: 0.3rem;
+    margin-bottom: 0.2rem;
+    font-size: 1rem;
+    color:black   
+}
+
+div.list{
+    /* padding: 0.4rem; */
+    padding: 0.6rem;
+    /* padding-bottom: 0.8rem; */
+    border-bottom: solid .5px lightgray;
+}
+
+
+
