프로필 클릭 가능하게 수정

--- a/front_end/src/components/user/profile/UserProfile.scss
+++ b/front_end/src/components/user/profile/UserProfile.scss
@@ -40,6 +40,7 @@ div.user-profile{
             color: rgb(156, 156, 156);
             position: relative;
         }
+        cursor: pointer;
     }
     #userId-mini{
         position: absolute;
@@ -59,6 +60,7 @@ div.user-profile{
             color: rgb(156, 156, 156);
             position: relative;
         }
+        cursor: pointer;
     }
     // div{
     //     display: inline;
