--- a/front_end/src/index.scss
+++ b/front_end/src/index.scss
@@ -1,3 +1,5 @@
+@import './mixin';
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -14,6 +16,9 @@ code {
 
 .main--body{
   padding-top : 30px;
+  @include respond-to('small') {
+    padding-bottom : 60px;
+  }
   display: flex;
   min-height: 100vh;
   flex-direction: column;
