--- a/front_end/src/components/intro/ListUp.scss
+++ b/front_end/src/components/intro/ListUp.scss
@@ -19,6 +19,7 @@
   overflow: hidden;
   text-transform: uppercase;
   font-size: 10px;
+  text-size-adjust:none;
   line-height: 10px;
   padding: 15px;
 
@@ -49,6 +50,7 @@
   color: white;
   font-size: 33px;
   line-height: 40px;
+  text-size-adjust:none;
   font-weight: 600;
   margin: 0;
   padding: 0;
@@ -60,6 +62,7 @@
   position: relative;
   color: white;
   font-size: 16px;
+  text-size-adjust:none;
   line-height: 14px;
   margin: 0;
   padding-top: 6px;
