--- a/front_end/src/components/user/profile/UserProfile.scss
+++ b/front_end/src/components/user/profile/UserProfile.scss
@@ -44,6 +44,13 @@ $breakpoints: (
         position : relative;
     }
 }
+#follow-button{
+    button.ui.orange.button{
+        padding: 0.2rem;
+        font-size: 1rem;
+        position : relative;
+    }
+}
 #userpage{
     position:relative;
     width: 270px;
