모달 폼 ui 수정

--- a/front_end/src/components/user/profile/UserProfile.scss
+++ b/front_end/src/components/user/profile/UserProfile.scss
@@ -102,7 +102,7 @@ div.user-profile{
         top: -3rem;
         left : 4rem;
         font-size: 1.28571429rem;
-        width : 60vw;
+        width : 200px;
         // margin-top: -.21425rem;
         line-height: 1.28571429rem;
         color: rgba(0,0,0,.85);
