--- a/front_end/src/containers/mainpage/ModalForm.scss
+++ b/front_end/src/containers/mainpage/ModalForm.scss
@@ -2,16 +2,12 @@
 
 /* 모달의 크기 수정하는 css입니다. */
 div.ui.fullscreen.modal.transition.visible.active {
-    @include respond-to('small') {
-       
+  position: relative;
+  margin: auto;
+  @include respond-to('small') {
     width: 80%!important;  
-    left: 10%!important;
-    margin: 1rem auto;
-      }
-      @include respond-to('large') {
-    position: relative;
+  }
+  @include respond-to('large') {
     width: 350px!important;  
-    //left: 50%!important;
-    margin: 1rem auto;
-      }
+  }
 }
